U artifact generators refactored