@@ -7,19 +7,11 @@ import java.io.File;
 import java.nio.file.InvalidPathException;
 import java.nio.file.Paths;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
-import java.util.stream.Collectors;
-
-import org.apache.commons.lang3.StringUtils;
-import org.apache.commons.lang3.SystemUtils;
 
 import io.github.fvarrui.javapackager.model.Platform;
-import io.github.fvarrui.javapackager.utils.CommandUtils;
 import io.github.fvarrui.javapackager.utils.FileUtils;
 import io.github.fvarrui.javapackager.utils.IconUtils;
-import io.github.fvarrui.javapackager.utils.JDKUtils;
-import io.github.fvarrui.javapackager.utils.JavaUtils;
 import io.github.fvarrui.javapackager.utils.Logger;
 import io.github.fvarrui.javapackager.utils.VelocityUtils;
 
@@ -27,8 +19,9 @@ public abstract class Packager extends PackagerSettings {
 	
 	private static final String DEFAULT_ORGANIZATION_NAME = "ACME";
 	
-	// artifact generators collection
+	// artifact generators
 	protected List<ArtifactGenerator> installerGenerators = new ArrayList<>();
+	private BundleJre generateJre = new BundleJre(); 
 	
 	// internal generic properties (setted in "createAppStructure/createApp")
 	protected File appFolder;
@@ -74,6 +67,10 @@ public abstract class Packager extends PackagerSettings {
 	
 	public List<String> getClasspaths() {
 		return classpaths;
+	}
+	
+	public File getJreDestinationFolder() {
+		return jreDestinationFolder;
 	}
 
 	// ===============================================
@@ -201,204 +198,7 @@ public abstract class Packager extends PackagerSettings {
 		Logger.infoUnindent("All additional resources copied!");
 		
 	}
-
-	/**
-	 * Bundle a Java Runtime Enrironment with the app.
-	 * @param destinationFolder Destination folder
-	 * @param jarFile Runnable jar file
-	 * @param libsFolder Libs folder
-	 * @param specificJreFolder Specific JRE folder to be used
-	 * @param customizedJre Creates a reduced JRE
-	 * @param defaultModules Default modules
-	 * @param additionalModules Additional modules
-	 * @param platform Target platform
-	 * @throws Exception Process failed
-	 */
-	protected void bundleJre(File destinationFolder, File jarFile, File libsFolder, File specificJreFolder, boolean customizedJre, List<String> defaultModules, List<String> additionalModules, Platform platform) throws Exception {
-		if (!bundleJre) {
-			Logger.warn("Bundling JRE disabled by property 'bundleJre'!\n");
-			return;
-		}
-		
-		File currentJdk = new File(System.getProperty("java.home"));
-		
-		Logger.infoIndent("Bundling JRE ... with " + currentJdk);
-		
-		if (specificJreFolder != null) {
-			
-			Logger.info("Embedding JRE from " + specificJreFolder);
-			
-			// fixes the path to the JRE on MacOS if "release" file not found
-			if (platform.equals(Platform.mac) && !FileUtils.folderContainsFile(specificJreFolder, "release")) {
-				specificJreFolder = new File(specificJreFolder, "Contents/Home");
-				Logger.warn("Specified jrePath fixed: " + specificJreFolder);				
-			}
-			
-			// checks if valid jre specified
-			if (!JDKUtils.isValidJRE(platform, specificJreFolder)) {
-				throw new Exception("Invalid JRE specified for '" + platform + "' platform: " + specificJreFolder);
-			}
-			
-			// removes old jre folder from bundle
-			if (destinationFolder.exists()) FileUtils.removeFolder(destinationFolder);
-
-			// copies JRE folder to bundle
-			FileUtils.copyFolderContentToFolder(specificJreFolder, destinationFolder);
-
-			// sets execution permissions on executables in jre
-			File binFolder = new File(destinationFolder, "bin");
-			Arrays.asList(binFolder.listFiles()).forEach(f -> f.setExecutable(true, false));
-
-		} else if (JavaUtils.getJavaMajorVersion() <= 8) {
-			
-			throw new Exception("Could not create a customized JRE due to JDK version is " + SystemUtils.JAVA_VERSION + ". Must use jrePath property to specify JRE location to be embedded");
-			
-		} else if (!platform.isCurrentPlatform() && jdkPath.equals(currentJdk)) {
-			
-			Logger.warn("Cannot create a customized JRE ... target platform (" + platform + ") is different than execution platform (" + Platform.getCurrentPlatform() + "). Use jdkPath property.");
-			
-			bundleJre = false;
-
-		} else {
-			
-			Logger.info("Creating customized JRE ...");
-			
-			// tests if specified JDK is for the same platform than target platform
-			if (!JDKUtils.isValidJDK(platform, jdkPath)) {
-				throw new Exception("Invalid JDK for platform '" + platform + "': " + jdkPath);
-			}
-			
-			String modules = getRequiredModules(libsFolder, customizedJre, jarFile, defaultModules, additionalModules);
-
-			Logger.info("Creating JRE with next modules included: " + modules);
-
-			File modulesDir = new File(jdkPath, "jmods");
-			if (!modulesDir.exists()) {
-				throw new Exception("jmods folder doesn't exist: " + modulesDir);
-			}
-			
-			Logger.info("Using " + modulesDir + " modules directory");
 	
-			File jlink = new File(currentJdk, "/bin/jlink");
-	
-			if (destinationFolder.exists()) FileUtils.removeFolder(destinationFolder);
-			
-			// generates customized jre using modules
-			CommandUtils.execute(jlink.getAbsolutePath(), "--module-path", modulesDir, "--add-modules", modules, "--output", destinationFolder, "--no-header-files", "--no-man-pages", "--strip-debug", "--compress=2");
-	
-			// sets execution permissions on executables in jre
-			File binFolder = new File(destinationFolder, "bin");
-			Arrays.asList(binFolder.listFiles()).forEach(f -> f.setExecutable(true, false));
-
-		}
-		
-		// removes jre/legal folder
-		File legalFolder = new File(destinationFolder, "legal");
-		if (legalFolder.exists()) {
-			FileUtils.removeFolder(legalFolder);
-		}
-	
-		if (bundleJre) {
-			Logger.infoUnindent("JRE bundled in " + destinationFolder.getAbsolutePath() + "!");
-		} else {
-			Logger.infoUnindent("JRE bundling skipped!");
-		}
-		
-	}
-	
-	/**
-	 * Uses jdeps command tool to determine which modules all used jar files depend on
-	 * 
-	 * @param libsFolder folder containing all needed libraries
-	 * @param customizedJre if true generates a customized JRE, including only identified or specified modules. Otherwise, all modules will be included.
-	 * @param jarFile Runnable jar file reference
-	 * @param defaultModules Additional files and folders to include in the bundled app.
-	 * @param additionalModules Defines modules to customize the bundled JRE. Don't use jdeps to get module dependencies.
-	 * @return string containing a comma separated list with all needed modules
-	 * @throws Exception Process failed
-	 */
-	protected String getRequiredModules(File libsFolder, boolean customizedJre, File jarFile, List<String> defaultModules, List<String> additionalModules) throws Exception {
-		
-		Logger.infoIndent("Getting required modules ... ");
-		
-		File jdeps = new File(System.getProperty("java.home"), "/bin/jdeps");
-
-		File jarLibs = null;
-		if (libsFolder != null && libsFolder.exists()) 
-			jarLibs = new File(libsFolder, "*.jar");
-		else
-			Logger.warn("No dependencies found!");
-		
-		List<String> modulesList;
-		
-		if (customizedJre && defaultModules != null && !defaultModules.isEmpty()) {
-			
-			modulesList = 
-				defaultModules
-					.stream()
-					.map(module -> module.trim())
-					.collect(Collectors.toList());
-		
-		} else if (customizedJre && JavaUtils.getJavaMajorVersion() >= 13) { 
-			
-			String modules = 
-				CommandUtils.execute(
-					jdeps.getAbsolutePath(), 
-					"-q",
-					"--multi-release", JavaUtils.getJavaMajorVersion(),
-					"--ignore-missing-deps", 
-					"--print-module-deps", 
-					jarLibs,
-					jarFile
-				);
-			
-			modulesList = 
-				Arrays.asList(modules.split(","))
-					.stream()
-					.map(module -> module.trim())
-					.filter(module -> !module.isEmpty())
-					.collect(Collectors.toList());
-			
-		} else if (customizedJre && JavaUtils.getJavaMajorVersion() >= 9) { 
-		
-			String modules = 
-				CommandUtils.execute(
-					jdeps.getAbsolutePath(), 
-					"-q",
-					"--multi-release", JavaUtils.getJavaMajorVersion(),
-					"--list-deps", 
-					jarLibs,
-					jarFile
-				);
-
-			modulesList = 
-				Arrays.asList(modules.split("\n"))
-					.stream()
-					.map(module -> module.trim())
-					.map(module -> (module.contains("/") ? module.split("/")[0] : module))
-					.filter(module -> !module.isEmpty())
-					.filter(module -> !module.startsWith("JDK removed internal"))
-					.distinct()
-					.collect(Collectors.toList());
-
-		} else {
-			
-			modulesList = Arrays.asList("ALL-MODULE-PATH");
-			
-		}
-				
-		modulesList.addAll(additionalModules);
-		
-		if (modulesList.isEmpty()) {
-			Logger.warn("It was not possible to determine the necessary modules. All modules will be included");
-			modulesList.add("ALL-MODULE-PATH");
-		}
-		
-		Logger.infoUnindent("Required modules found: " + modulesList);
-		
-		return StringUtils.join(modulesList, ",");
-	}
-
 	/**
 	 * Locates license file
 	 * @param licenseFile Specified license file
@@ -559,8 +359,8 @@ public abstract class Packager extends PackagerSettings {
     		Logger.infoUnindent("Runnable jar created in " + jarFile + "!");
         }
 
-		// checks if JRE should be embedded
-		bundleJre(jreDestinationFolder, jarFile, libsFolder, jrePath, customizedJre, modules, additionalModules, platform);
+		// embeds a JRE if is required
+        generateJre.apply(this);
         
         File appFile = doCreateApp();
 
